--- a/00_Template.html
+++ b/00_Template.html
@@ -315,6 +315,7 @@
   </div>
 </template>
 
+<!-- 管理者用のモード切り替えスイッチ -->
 <template id="manager-links">
   <div class="dropdown m-2">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
