--- a/01_User.html
+++ b/01_User.html
@@ -58,7 +58,7 @@
       reload(0)
 
       // 管理者ログインならば、モード変更ボタンを追加
-      const isManager = <?!=isManager ?>;
+      const isManager = "<?=isManager ?>";
       if (isManager){
         document.body.appendChild(document.getElementById("manager-links").content.cloneNode(true));
       }
