募集締切表示の追加

--- a/00_Template.html
+++ b/00_Template.html
@@ -62,6 +62,10 @@
 <template id="CancelBtnTemplate">
   <button type="button" class="btn btn-primary cancel-contents-btn">キャンセル　<i class="bi bi-send"></i></button>
 </template>
+<!-- 予約ボタン -->
+<template id="notBtnTemplate">
+  <button type="button" class="btn btn-outline-dark" disabled>募集は終了しました　<i class="bi bi-emoji-dizzy"></i></i></button>
+</template>
 
 <!-- 以下、講座設定モジュールのテンプレート -->
 <!-- フッター -->
