管理者ステータスによる制御を修正

--- a/01_User.html
+++ b/01_User.html
@@ -59,7 +59,7 @@
 
       // 管理者ログインならば、モード変更ボタンを追加
       const isManager = "<?=isManager ?>";
-      if (isManager){
+      if (isManager == 'true'){
         document.body.appendChild(document.getElementById("manager-links").content.cloneNode(true));
       }
     </script>
