擬似ユーザー用に正規表現バリデーションの廃止

--- a/04_managerPanel.html
+++ b/04_managerPanel.html
@@ -31,7 +31,7 @@
       <div class="col-5 m-1">
         <!-- <label for="input-mail-adress" class="form-label">メールアドレス</label> -->
         <div class="input-group has-validation">
-          <input type="text" class="form-control" id="input-mail-adress" value="" required pattern="[a-c][0-9A-Ba-b][0-9A-Ba-b][0-9]{5}">
+          <input type="text" class="form-control" id="input-mail-adress" value="" required>
           <span class="input-group-text" id="inputGroupPrepend">@aoyama.jp</span>
           <div class="invalid-feedback">
             Aoyama-mailを入力してください。
